Integrate rswag-ui and rswag-api
