# app/controllers/microposts_controller.rb
@@ -2,6 +2,7 @@ class MicropostsController < ApplicationController
   before_action :logged_in_user, only: [:create, :destroy]
   before_action :correct_user,   only: :destroy
 
+  # Create a new micropost.
   def create
     @micropost = current_user.microposts.build(micropost_params)
     @micropost.image.attach(params[:micropost][:image])
@@ -14,6 +15,7 @@ class MicropostsController < ApplicationController
     end
   end
 
+  # Delete a micropost.
   def destroy
     @micropost.destroy
     flash[:success] = "Micropost deleted"
