# app/controllers/password_resets_controller.rb
@@ -3,9 +3,15 @@ class PasswordResetsController < ApplicationController
   before_action :valid_user,       only: [:edit, :update]
   before_action :check_expiration, only: [:edit, :update]    # Case (1)
 
+  # @label rest.read
   def new
   end
 
+  # Create a password reset request. An email will be sent with password
+  # reset instructions. The email contains a reset token, which the user
+  # must later present.
+  #
+  # @label password_reset.create rest.create
   def create
     @user = User.find_by(email: params[:password_reset][:email].downcase)
     if @user
@@ -19,9 +25,14 @@ class PasswordResetsController < ApplicationController
     end
   end
 
+  # @label rest.read
   def edit
   end
 
+  # Process a password reset request. The reset token and the new password
+  # must both be provided and valid.
+  #
+  # @label password_reset.perform rest.update
   def update
     if params[:user][:password].empty?                  # Case (3)
       @user.errors.add(:password, "can't be empty")
